# decaf-emu

src/: CMakeLists.txt
src/decaf-qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/libdecaf/src/: decaf_eventlistener.cpp
